--- a/socslingo/src/main/resources/com/socslingo/views/activity_main.fxml
+++ b/socslingo/src/main/resources/com/socslingo/views/activity_main.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -14,51 +13,65 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane  maxHeight="Infinity" stylesheets="@../css/activity.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.socslingo.controllers.ActivityMainController">
-
+<BorderPane stylesheets="@../css/activity.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.socslingo.controllers.ActivityMainController">
+   
    <!-- Top Section -->
    <top>
-      <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" minHeight="80.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
-            <GridPane prefHeight="22.0">
+            <GridPane alignment="CENTER" prefHeight="22.0">
                <columnConstraints>
+                  <ColumnConstraints halignment="RIGHT" hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="RIGHT" hgrow="NEVER" />
                   <ColumnConstraints halignment="CENTER" hgrow="NEVER" maxWidth="40.0" prefWidth="40.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="849.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints maxHeight="22.0" minHeight="22.0" prefHeight="22.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <!-- ProgressBar -->
-                  <ProgressBar fx:id="progress_bar" prefWidth="849.0" progress="0.0" styleClass="custom-progress-bar" GridPane.columnIndex="2" />
-
+                  
                   <!-- Exit Button -->
-                  <Button fx:id="exit_button" mnemonicParsing="false" styleClass="exit-button">
-                     <graphic>
-                        <ImageView fitWidth="21" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/reject.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button fx:id="exit_button" alignment="CENTER" mnemonicParsing="false" styleClass="exit-button-background" GridPane.columnIndex="1">
+                    <graphic>
+                        <Group>
+                            <SVGPath content="M2.62126 0.792893C2.23074 0.402369 1.59757 0.402369 1.20705 0.792893C0.816525 1.18342 0.816525 1.81658 1.20705 2.20711L8.58588 9.58594L0.793137 17.3787C0.402613 17.7692 0.402613 18.4024 0.793137 18.7929C1.18366 19.1834 1.81683 19.1834 2.20735 18.7929L10.0001 11.0002L17.7928 18.7929C18.1834 19.1834 18.8165 19.1834 19.207 18.7929C19.5976 18.4024 19.5976 17.7692 19.207 17.3787L11.4143 9.58594L18.7931 2.20711C19.1837 1.81658 19.1837 1.18342 18.7931 0.792893C18.4026 0.402369 17.7694 0.402369 17.3789 0.792893L10.0001 8.17172L2.62126 0.792893Z" styleClass="exit-button" />
+                        </Group>
+                    </graphic>
+
                   </Button>
+                  <!-- ProgressBar -->
+                  <ProgressBar fx:id="progress_bar" prefWidth="849.0" progress="0.0" styleClass="custom-progress-bar" GridPane.columnIndex="3" />
+                  <Label alignment="CENTER" text=" " GridPane.columnIndex="5">
+                     <graphic>
+                         <Group>
+                             <!-- Outer Heart Path -->
+                             <SVGPath content="M3 12.6798C3 15.2727 4.31423 17.5654 6.32688 18.9559L14.9105 26.445C15.9302 27.3347 17.4537 27.3228 18.4595 26.4174L27.092 18.6456C28.8662 17.2376 30.0001 15.0882 30.0001 12.6798C30.0001 8.43862 26.4839 5.00049 22.1464 5.00049C19.93 5.00049 17.928 5.89823 16.5 7.34212C15.0721 5.89823 13.0701 5.00049 10.8537 5.00049C6.51622 5.00049 3 8.43862 3 12.6798Z" styleClass="heart-outer" />
+                             
+                             <!-- Inner Circle Path -->
+                             <SVGPath content="M10.5348 15.9898C12.2687 15.9898 13.6743 14.5427 13.6743 12.7576C13.6743 10.9725 12.2687 9.52539 10.5348 9.52539C8.80088 9.52539 7.39526 10.9725 7.39526 12.7576C7.39526 14.5427 8.80088 15.9898 10.5348 15.9898Z" styleClass="heart-inner" />
+                         </Group>
+                     </graphic>
+                 </Label>
+                 <Label fx:id="progress_label" alignment="CENTER" styleClass="activity-lives-counter" text="5" GridPane.columnIndex="6">
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin></Label>
                </children>
             </GridPane>
          </children>
-         <padding>
-            <Insets bottom="50.0" top="50.0" />
-         </padding>
       </HBox>
    </top>
-
+   
    <!-- Center Section -->
    <center>
-      <VBox VBox.vgrow="ALWAYS">
+      <VBox style="-fx-background-color: white;" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS">
          <children>
             <HBox fx:id="activity_content_area" alignment="CENTER" VBox.vgrow="ALWAYS">
                <!-- Ensure activity_content_area can grow -->
@@ -70,12 +83,12 @@
          </children>
       </VBox>
    </center>
-
+   
    <!-- Bottom Section -->
    <bottom>
       <HBox fx:id="bottom_section" alignment="CENTER" styleClass="bottom-section-neutral" BorderPane.alignment="CENTER">
          <children>
-
+            
             <HBox fx:id="activity_information_container" alignment="CENTER" prefWidth="800.0">
                <children>
                   <!-- Skip Control Container -->
@@ -108,12 +121,12 @@
                      </StackPane>
                   </VBox>
                </children>
-            </HBox>
+            </HBox> 
          </children>
          <padding>
             <Insets bottom="50.0" top="50.0" />
          </padding>
       </HBox>
    </bottom>
-
+   
 </BorderPane>
